# roguelike

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Folder.DotSettings  README.md  cpp.hint  roguelike.natvis  vcpkg.json
.github/workflows/: cmake-build.yml
cmake/: FindSDL3.cmake  FindSDL3_Image.cmake  asan.cmake  ccache.cmake  clang-format.cmake  cmake-utils.cmake  compiler-warnings.cmake  ide-config.cmake  resources.cmake  scratchpad.cmake  sdl3_image-config.cmake  shaders.cmake  submodule-init.cmake  vcpkg-init.cmake  vcpkg-setup.cmake
data/: keyboard.json  keymap.json
data/configs/: keyboard.json  keymap.json
data/docs/: natvis-chart.md  natvis-syntax-reference.md
data/docs/nanovg/: advanced_grid_layout.md
data/docs/opengl/: readme.md
data/docs/sdl/: api_cheatsheet.c
data/docs/snippets/: hit_testing.cpp
data/docs/vs/: natvis-format-specifiers.md
data/fonts/: IBM-EGA.tres  noto_sans.tres  roboto.tres
data/game/: construction.json  item.json  terrain.json
data/images/: chunk_tile.aseprite  chunk_tile.png.import  floor_tile.ase  floor_tile2.ase  friendly.ase  light_shadow_light.png.import  monster.ase  monster.png.import  pepe.png.import  player.aseprite  player.png.import  player_test.ase  player_test.png.import  player_test16.ase  scifi-ui.aseprite  scifi-ui.png.import  scifiobjects-sheet.aseprite  scifiobjects-sheet.png.import  scifitiles-sheet-hull.aseprite  scifitiles-sheet-hull.png.import  scifitiles-sheet.ase  scifitiles-sheet.png.import  starfield-background.ase  starfield-background.png.import
data/misc/: c_interface_modules.c  main_loop.cpp  opengl_render.cpp  sprite_drawing.cpp  tooltip_popup.cpp
data/shaders/: ascii_modern.fs  ascii_modern.vs  basic.fs  basic.vs  basic_textured.fs  basic_textured.vs  fragment_shader.glsl  instanced_fragment_shader.glsl  instanced_vertex_shader.glsl  vertex_shader.glsl
data/themes/: widget-styles.json
data/themes/schemas/: base-schema.json  color-schema.json  gui-theme-schema.json  text-schema.json
data/tilemaps/: shuttle01.json  shuttle01.tmx
data/tileset/: AutoTileTesting.tscn  sci-fi-tileset.tres  scifi-autotile.tres  scifi-objects.json  scifi-objects.tres  scifi-objects.tsj  scifi-objects.tsx  scifi.json  scifi.tsx
data/tools/rgui-icons/: rguiicons
data/tools/rgui-layout/: rguilayout
data/ui/: main_menu_layout.rgl
docs/snippets/: mouse_surface_interaction.cpp
docs/vcpkg/: vcpkg-configuration.json
scripts/: generate_gl_doc_comments.py
src/: ContentLoader.cpp  ContentLoader.h  Debug.cpp  Debug.h  Event.h  GameMap.cpp  GameMap.h  Graph.h  GraphNode.h  Keyboard.cpp  Keyboard.h  LoadingUtils.cpp  LoadingUtils.h  MapNode.cpp  MapNode.h  Settings.h  State.cpp  State.h  StateMachine.h  TileMap.h  main.cpp
src/components/: Spacial.h
src/core/: Application.cpp  Application.h  CellularAutomata.h  application.cpp  application.hpp  assert.hpp  display.cpp  display.hpp  event_handler.hpp  game.cpp  game.hpp  gui.cpp  gui.hpp  input.hpp  keyboard.cpp  keyboard.hpp  keymap.hpp  main_window.cpp  main_window.hpp  math.hpp  mouse.cpp  mouse.hpp  numeric_types.hpp  numerics.hpp  options.hpp  renderer.cpp  renderer.hpp  scoped_render.hpp  system.hpp  types.hpp  window.cpp  window.hpp
src/ds/: circle.hpp  color.hpp  dimensions.hpp  dims.hpp  graph.hpp  grid.hpp  line.hpp  margin.hpp  matrix.hpp  packed_array.hpp  point.hpp  polygon.hpp  rect.hpp  refcounted.hpp  ring_buffer.hpp  rtree.hpp  shared.hpp  triangle.hpp  vector2d.hpp
src/ecs/: component.hpp  observable.hpp  observers.cpp  observers.hpp  scene.hpp  scenes.cpp  scenes.hpp  systems.cpp  systems.hpp
src/gfx/: nvg_renderer.cpp  nvg_renderer.hpp  text.hpp
src/gl/: glsl_shader.hpp  instanced_buffer.hpp  opengl.hpp  shader.hpp  vertex_buffer.cpp  vertex_buffer.hpp
src/graphics/: nvg_renderer.cpp  nvg_renderer.hpp  text.hpp
src/gui/: button.cpp  button.hpp  canvas.cpp  canvas.hpp  checkbox.cpp  checkbox.hpp  colorpicker.cpp  colorpicker.hpp  colorwheel.cpp  colorwheel.h  colorwheel.hpp  combobox.cpp  combobox.hpp  common.cpp  common.hpp  darwin.mm  dropdownbox.cpp  dropdownbox.hpp  entypo.hpp  fontstash.h  formhelper.hpp  glcanvas.cpp  glutil.cpp  graph.cpp  graph.hpp  gui.hpp  icons.hpp  imagepanel.cpp  imagepanel.hpp  imageview.cpp  imageview.hpp  label.cpp  label.hpp  layout.cpp  layout.hpp  loadimages.cpp  messagedialog.cpp  messagedialog.hpp  metal.hpp  nanogui.hpp  (+51 more)
src/math/: dimension2d.hpp  point2d.hpp  rect.hpp  vector2d.hpp
src/primitives/: point.hpp  rect.hpp  triangle.hpp  vector2d.hpp
src/render/: vectorized_renderer.cpp  vectorized_renderer.hpp
src/sdl/: application.hpp  color.hpp  defs.hpp  display.hpp  event_handler.hpp  events.hpp  keyboard.hpp  mouse.hpp  pixel_data.hpp  renderer.hpp  renderer_opengl.cpp  renderer_opengl.hpp  scoped_lock.hpp  sdl.hpp  surface.cpp  surface.hpp  texture.cpp  texture.hpp  time.hpp  utils.hpp  window.cpp  window.hpp
src/states/: MainMenuState.cpp  MainMenuState.h  TestState.cpp  TestState.h
src/testing/: benchmarks.hpp  chrono_conversions.hpp  reverse.hpp  signal.hpp  variant_visitor.hpp
src/ui/: Menu.cpp  Menu.h  UIElement.cpp  UIElement.h  Window.cpp  Window.h  canvas.cpp  canvas.hpp  control.cpp  control.hpp  control_variant.hpp  form.hpp  gui.hpp  icons.hpp  layout.hpp  properties.hpp  theme.hpp  widget.cpp  widget.hpp
src/utils/: assert.hpp  camera.hpp  color.hpp  concepts.hpp  conversions.hpp  crtp.hpp  debug.hpp  fs.hpp  function_traits.hpp  generator.hpp  hash.hpp  io.hpp  iterator.hpp  literals.hpp  logging.hpp  math.hpp  matrix.hpp  memory.hpp  network.hpp  numeric.hpp  numeric_traits.hpp  options.hpp  properties.hpp  random.hpp  reflect.hpp  sdl_defs.hpp  std_utils.hpp  stlutils.hpp  time.hpp  unicode.cpp  unicode.hpp  utf.c  utf.hpp
tools/render-doc/: msvc-debug-settings.cap
tools/ressharper/: resharper-roguelike.DotSettings
tools/rgui-resource-packer/: README.md
tools/rgui-styler/: README.md
tools/rgui-texture-packer/: README.md
tools/rgui-texture-viewer/: README.md  rtexviewer
(+457 files in other folders)
